# High-performance-gateway

./: .clang-format  .dockerignore  .editorconfig  .env.example  .gitignore  CMakeLists.txt  Dockerfile  README.md  RELEASE_NOTES.md  build.sh  config.cpp  config.h  docker-compose.perf.yml  docker-compose.yml  main.cpp  makefile  server.conf  server_ctl.sh  webserver.cpp  webserver.h
.github/workflows/: ci.yml
CGImysql/: sql_connection_pool.h
app/: config.cpp  config.h  main.cpp  webserver.cpp  webserver.h  webserver_sub_reactor.cpp
deploy/nginx/: atlas-webserver.conf.example
docker/: Dockerfile.perf
docker/mysql/: init.sql
docs/: README.md  api.md  architecture.md  benchmark-trusted.csv  benchmark.csv  benchmark.md  database-migrations.md  file-module.md  final-review.md  interview-defense-playbook.md  interview-highlights.md  interview-qna-complete.md  ops-debug-runbook.md  perf-flamegraph.md  production-hardening-roadmap.md  project-structure.md  project-study-guide-complete.md  quickstart-5min.md  request-sequence.md  resume-and-pitch.md
http/: http_conn.cpp  http_conn.h  http_file_service.cpp
http/api/: auth.cpp  auth_session.cpp  auth_state.cpp  auth_state.h  operation_service.cpp
http/controllers/: auth_controller.cpp  auth_controller.h  file_controller.cpp  file_controller.h  operation_controller.cpp  operation_controller.h
http/core/: connection.cpp  connection.h  http_message.cpp  http_message.h  io.cpp  parser.cpp  response.cpp  ring_buffer.h  router.cpp  runtime.cpp  utils.cpp
http/files/: file_helpers.cpp  file_helpers.h  file_service.cpp  file_store.cpp  file_store.h  file_types.h  multipart_parser.cpp  multipart_parser.h
http/router/: router.cpp  router.h
infra/db/: README.md  sql_connection_pool.cpp
infra/lock/: README.md
infra/log/: README.md  block_queue.h  log.cpp  log.h
infra/storage/: storage.cpp  storage.h
infra/threadpool/: README.md  threadpool.h
infra/timer/: README.md  heap_timer.cpp  lst_timer.cpp
lock/: locker.h
log/: log.cpp
migrations/: 001_init_schema.sql  002_upgrade_existing_drive_dedup.sql  003_recycle_bin_ref_counts.sql  004_drop_passwd_salt.sql  005_normalize_schema.sql  006_ref_count_triggers.sql
repo/mysql/: file_repository.cpp  file_repository.h  mysql_utils.cpp  mysql_utils.h  operation_repository.cpp  operation_repository.h  session_repository.cpp  session_repository.h  user_repository.cpp  user_repository.h
reports/benchmarks/best_mutex_fixed_20260423/: results.csv
reports/perf/20260423_174015/: perf.folded
reports/perf/20260423_174258/: perf.folded
reports/perf/mutex_healthz/: perf-record.txt  wrk.txt
reports/perf/mutex_private_files/: perf-record.txt  wrk.txt
root/: README.md  files.html  index.html  judge.html  log.html  logError.html  login-error.html  login.html  media-photo.html  media-video.html  media.html  register-error.html  register.html  registerError.html  share.html  welcome.html
root/uploads/: 69dc4b3a093e93611b56fbe1_demo.txt  69ddf162188b90527b0c05ee_必看
scripts/: check_storage_consistency.sh  dev_reset_schema.sql  format_check.sh  migrate_db.sh  run_benchmark_suite.sh  run_coverage.sh  run_smoke_suite.sh  run_unit_tests.sh  test_auth_rate_limit.sh  test_chunked_api.sh  test_drive.sh  test_files.sh  test_lib.sh  test_private_api.sh  test_ref_count_consistency.sh  test_share.sh  test_share_edges.sh  test_share_race.sh  test_storage_consistency.sh  test_upload_failure_cleanup.sh  test_upload_quota_race.sh  test_upload_race_consistency.sh
service/auth/: auth_service.cpp  auth_service.h
service/files/: file_service.cpp  file_service.h  share_service.cpp  share_service.h  upload_service.cpp  upload_service.h
service/rate_limit/: auth_rate_limiter.cpp  auth_rate_limiter.h
test_pressure/: README.md  drive_items.lua  drive_upload.lua  login.lua  private_upload.lua  wrk_test.sh
tests/: auth_rate_limiter_test.cpp  file_helpers_test.cpp  file_service_test.cpp  http_message_test.cpp  log_smoke_test.cpp  multipart_parser_test.cpp  parser_chunked_test.cpp  share_service_test.cpp  upload_service_test.cpp
threadpool/: threadpool.h
timer/: README.md  heap_timer.cpp  heap_timer.h  lst_timer.cpp
webroot/: README.md  atlas.css  files.html  log.html  logError.html  login-error.html  login.html  registerError.html  share.html  welcome.html
